# jenkins-test

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  jenkins.properties  plugins.txt
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in
docker/: Dockerfile  Doxyfile  Jenkinsfile  Makefile  README.md  build_abcd.sh  coverage.sh  documentation.sh  exec_test_cov_doc.sh  execute_code.sh  jenkins.properties  mkisofs  runTest.sh  segmentation_tool.sh  testing_and_coverage.sh  user_mapping.sh
docker/dermscan/Dermscan/: CMakeLists.txt  README.md
docker/dermscan/Dermscan/DS_ABCD/: CMakeLists.txt  DS_ABCD.cpp  README.md
docker/dermscan/Dermscan/DS_FocusAnalysis/: CMakeLists.txt  DS_FocusAnalysis.cpp  README.md
docker/dermscan/Dermscan/DS_FusedRGB/: CMakeLists.txt  DS_FusedRGB.cpp
docker/dermscan/Dermscan/DS_LesionSegmentation/: CMakeLists.txt  DS_LesionSegmentation.cpp
docker/dermscan/Dermscan/Docs/: example_command_line_call.txt
docker/dermscan/Dermscan/Source/: bdArray.h  bdArrayOfDoubles.cpp  bdArrayOfDoubles.h  bdBIP.cpp  bdBIP.h  bdCurveXY.cpp  bdCurveXY.h  bdGIP.cpp  bdGIP.h  bdGeometry.cpp  bdGeometry.h  bdImage.cpp  bdImage.h  bdImageSliceTag.cpp  bdImageSliceTag.h  bdList.h  bdMatrix.h  bdMelanoma.cpp  bdMelanoma.h  bdObject.cpp  bdObject.h  bdRegion2D.cpp  bdRegion2D.h  bdRegion3D.cpp  bdRegion3D.h  bdRegularGrid.cpp  bdRegularGrid.h  bdStandard.h  bdString.cpp  bdString.h  bdVoxel.cpp  bdVoxel.h  vbdMelanoma.cpp  vbdMelanoma.h
doxygen/: c-doxygen.conf
sources/: main.cpp
